testing/tests/ui/typo_in_keyword.stderr
error: failed to parse template source
 --> <source attribute>:1:27
  |
       1 | {%for i in 1..=10%}{{i}}{%endfo%}
         |                           ^ close to this token
         |
 --> tests/ui/typo_in_keyword.rs:4:3
  |
4 | #[template(
  |   ^^^^^^^^
